--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@ a:hover {
     cursor: pointer;
 }
 
-.contrast { /* better color contrast for texts over images */
+.contrast { /* better color contrast for texts over images + fix <br> spaces */
     background: #FFFFFF;
     border-radius: 10px;
-    padding: 5px;
+    padding: 20px;
 }
 
 #page-loading-blocs-notifaction {
@@ -139,7 +139,7 @@ a:hover {
 .d-bloc h4 a,
 .d-bloc h5 a,
 .d-bloc h6 a {
-    color: rgba(255, 255, 255, 0.1);
+    color: rgb(255, 255, 255);
 }
 
 .d-bloc .a-btn:hover,
@@ -157,7 +157,6 @@ a:hover {
 .d-bloc h6 a:hover,
 .d-bloc p a:hover {
     color: rgb(22, 0, 73); /*fix for links in text on white background */
-    text-decoration: underline;
 }
 
 .d-bloc .navbar-toggle .icon-bar {
@@ -202,7 +201,7 @@ a:hover {
 
 .d-bloc .panel,
 .l-bloc {
-    color: rgba(0, 0, 0, .5);
+    color: rgba(0, 0, 0, 0.75);
 }
 
 .d-bloc .panel button:hover,
@@ -238,7 +237,7 @@ a:hover {
 .l-bloc h5 a,
 .l-bloc h6 a,
 .l-bloc p a {
-    color: rgba(0, 0, 0, .6);
+    color: rgba(0, 0, 0, 0.815);
 }
 
 .d-bloc .panel .a-btn:hover,
@@ -291,7 +290,7 @@ a:hover {
 }
 
 #bloc-1-hero h1 {
-    font-size: 32px;
+    font-size: 28px;
 }
 
 .navbar {
@@ -646,8 +645,6 @@ a[data-lightbox]:hover img {
     background: none;
 }
 
-h1,
-h2,
 h3,
 h4,
 h5,
@@ -660,12 +657,13 @@ label,
     color: #222222!important;
 }
 
-.col-sm-1 a {
-    color: #FFFCFA;
+h1,
+h2 {
+    font-weight: 600;
 }
 
 .container {
-    max-width: 1000px;
+    max-width: 1000px; /* shortest line width for better reading */
 }
 
 .hero-bloc-text {
@@ -763,7 +761,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgb(255, 255, 255);
     padding: 40px 40px 40px 40px;
 }
 
@@ -785,16 +783,16 @@ h4 {
 }
 
 .tc-white {
-    color: #B5583C!important;
+    color: #A55037!important;
 }
 
 .btn-atomic-tangerine {
-    background: #B5583C;
+    background: #853b19;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #853b19!important;
+    background: #B5583C!important;
     color: #FFFFFF!important;
 }
 
